opam-version:   "2.0"
name:           "polly"
maintainer:     "Christian Lindig <christian.lindig@citrix.com>"
authors:        "Christian Lindig <christian.lindig@citrix.com>"
homepage:       "https://github.com/lindig/polly"
bug-reports:    "https://github.com/lindig/polly/issues"
license:        "MIT"
dev-repo:       "git://github.com/lindig/polly.git"
build: [
  ["dune" "build" "-j" jobs "@install"]
]
depends: [
  "dune"    {build}
  "ocaml"
	"cmdliner"
  "base-unix"
]
synopsis: "Bindings for the Linux epoll system call"
