opam-version: "2.0"
name: "polly"
synopsis: "Bindings for the Linux epoll system call"
maintainer: "Christian Lindig <christian.lindig@citrix.com>"
authors: "Christian Lindig <christian.lindig@citrix.com>"
license: "MIT"
homepage: "https://github.com/lindig/polly"
bug-reports: "https://github.com/lindig/polly/issues"
depends: [
  "dune" {build}
  "ocaml"
  "cmdliner"
  "base-unix"
]
build: ["dune" "build" "-j" jobs "@install"]
dev-repo: "git://github.com/lindig/polly.git"
